War deployment works on Tomcat 9

--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,9 @@ dependencies {
     compile "org.grails:grails-plugin-services"
     compile "org.grails:grails-plugin-url-mappings"
     compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails.plugins:cache"
+    compile("org.grails.plugins:cache") {
+        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
+    }
     compile "org.grails.plugins:async"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:events"
